Draw land in canvas

--- a/TP3/index.html
+++ b/TP3/index.html
@@ -10,6 +10,6 @@
     <h1>TP3 - Land</h1>
     <canvas width="400" height="400" id="terrain"></canvas>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
