--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -11,5 +11,6 @@
     <canvas width="400" height="400" id="terrain"></canvas>
 
     <script src="land.js" type="module"></script>
+    <script src="snake.js" type="module"></script>
 </body>
 </html>
