--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -16,9 +16,9 @@
     <div id="score">Score: <span id="scoreNumber">0</span></div>
     <div class="buttons">
         <button id="start">Start</button>
-        <button id="pause">Pause</button>
-        <button id="resume">Resume</button>
-        <button id="stop">Stop</button>
+        <button id="pause" style="display: none;">Pause</button>
+        <button id="resume" style="display: none;">Resume</button>
+        <button id="stop" style="display: none;">Stop</button>
     </div>
 
     <div class="controls">
