create new directory

--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -51,5 +51,7 @@
 
     <script src="land.js" type="module"></script>
     <script src="snake.js" type="module"></script>
+    <script src="anneau.js" type="module"></script>
+    <script src="animation.js" type="module"></script>
 </body>
 </html>
